--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
     <title>Decriptador</title>
-    <link rel="icon" href="/images/logo.png" type="images">
+    <link rel="icon" href="./images/logo.png" type="images">
 </head>
 <body>
     <header>
-        <img class="logo" src="/images/logo.png" alt="Logo">
+        <img class="logo" src="./images/logo.png" alt="Logo">
     </header>
 
     <main>
